--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "cordovaPlugins": [
     "org.apache.cordova.console",
     "org.apache.cordova.device",
-    "com.ionic.keyboard"
+    "com.ionic.keyboard",
+    "cordova-plugin-whitelist"
   ],
   "cordovaPlatforms": [
     "ios"
