--- a/ionic.project
+++ b/ionic.project
@@ -4,15 +4,15 @@
   "proxies": [
     {
       "path": "api/items",
-      "proxyUrl": "http://ancient-fortress-6314.herokuapp.com/api/items"
+      "proxyUrl": "http://greenwich-fitness-api.herokuapp.com/api/items"
     },
     {
       "path": "api/consultants",
-      "proxyUrl": "https://ancient-fortress-6314.herokuapp.com/api/consultants"
+      "proxyUrl": "https://greenwich-fitness-api.herokuapp.com/api/consultants"
     },
     {
       "path": "api/reviews",
-      "proxyUrl": "https://ancient-fortress-6314.herokuapp.com/api/reviews"
+      "proxyUrl": "https://greenwich-fitness-api.herokuapp.com/api/reviews"
     }
   ]
 }
